--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
+    "react-simple-chatbot": "^0.6.1",
     "react-typed": "^1.2.0",
     "typescript": "4.9.5",
     "youtube-api-search": "^0.0.5"
