--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
+    "@tensorflow/tfjs": "^4.8.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -16,12 +22,14 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.12.18",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
     "react-simple-chatbot": "^0.6.1",
     "react-typed": "^1.2.0",
+    "react-webcam": "^7.1.1",
     "typescript": "4.9.5",
     "youtube-api-search": "^0.0.5"
   },
